--- a/homepage/static/homepage/css/index.css
+++ b/homepage/static/homepage/css/index.css
@@ -1,65 +1,4 @@
-/* Estilizações Gerais */
-body {
-    text-align: justify;
-}
-
-
-/* Barra de navegação */
-.navbar ul li {
-    display: flex;
-    width: 10rem;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    padding: 0 1rem;
-    margin: 0 1rem;
-}
-.navbar ul {
-    display: flex;
-    width: 80%;
-    list-style: none;
-}
-.navbar a {
-    text-decoration: none;
-    color: #545454;
-}
-.active {
-    border-radius: 0.4rem;
-    background-color: #F5F5F5;
-    color: #FFFFFF;
-    padding: 0.5rem 0;
-}
-
-/* Estilização do conteúdo */
-.title {
-    font-size: 1.5rem;
-    padding-bottom: 0.5rem;
-    text-align: left;
-}
-
-.sub-title {
-    font-size: 1.1rem;
-    text-align: left;
-    margin-top: 1.5rem;
-}
-
-.body-text {
-    padding: 0.5rem 0;
-}
-
-.default-list {
-    list-style: none;
-    padding: 0.2rem 0;
-    margin: 0.2rem 0;
-}
-.default-list li {
-    margin: 0.2rem 0;
-    padding: 0.2rem 0;
-}
-
-
 /* Mensagem de bem vindo */
-
 #initialWellcome p {
     font-family: monospace;
     font-size: 1.5rem;
@@ -72,6 +11,117 @@ body {
         animaTexto 4s steps(18) infinite
     ;
     animation-fill-mode: forwards;
+}
+
+#comments-area {
+    height: 150px;
+    background-color: #FFFFFF;
+    border: 1px solid #CCCCCC;
+    border-radius: 1rem;
+}
+#comments-area h3 {
+    padding: 2rem 1rem;
+}
+#comments-area img {
+    width: 50px;
+    height: 50px;
+    margin: 0 1rem;
+    border-radius: 50%;
+}
+.container__division-comment {
+    display: flex;
+    align-items: center;
+}
+.container__division-comment p {
+    font-size: 0.7rem;
+    color: #949494;
+}
+.container__division-comment h4 {
+    font-size: 1.1rem;
+    color: #545454;
+}
+#more-comments {
+    width: 75px   ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+#more-comments img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-left: -15px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+}
+#more-comments img:first-child {
+    margin-left: 0;
+}
+.container__division-plusone {
+    margin-left: 1rem;
+    padding: 0.5rem;
+    border-radius: 30%;
+    background-color: #E9E9E9;
+    color: #545454;
+}
+.container__division-plusone:hover {
+    cursor: pointer;
+    background-color: #e9e9e92c;
+}
+.container__division-plusone a {
+    text-decoration: none;
+    color: #545454;
+}
+
+#clients-avaliation {
+    display: none;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 20px;
+    row-gap: 0;
+    width: 70%;
+    height: 150px;
+    margin-bottom: 100px;
+}
+#grid1 {
+    grid-area: 1/1/2/2;
+}
+#grid2 {
+    grid-area: 1/2/2/3;
+}
+#grid3 {
+    grid-area: 1/3/2/4;
+}
+#grid4 {
+    grid-area: 1/4/2/5;
+}
+.container__division-grid {
+    border: 1px solid #CCCCCC;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 1rem;
+}
+.container__division-star {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 1rem;
+}
+.container__division-star img {
+    width: 1rem;
+}
+.container__division-review-info {
+    display: flex;
+    margin-top: 1rem;
+}
+.container__division-review-info img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem;
 }
 
 @keyframes animaCursor {
@@ -92,11 +142,30 @@ body {
     }
 }
 
-
-
 /* Breakpoints Resposive */
 @media (min-width: 801px) {
     #initialWellcome p {
         font-size: 2rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    #clients-avaliation {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    #more-comments,
+    #comments-area,
+    #grid4 {
+        display: none;
+    }
+}
+
+@media (min-width: 1440px) {
+    #clients-avaliation {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    #grid4 {
+        display: flex;
     }
 }
