--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static "homepage/css/global.css" %}">
     <title>osantoschris | {% block title %}home{% endblock title %}</title>
-    {% block extra_css %}{% endblock extra_css %}
+    {% block extra_css %}
+        <link rel="stylesheet" href="{% static "homepage/css/index.css" %}">
+    {% endblock extra_css %}
 </head>
 <body>
 
