--- a/staticfiles/homepage/css/style.css
+++ b/staticfiles/homepage/css/style.css
@@ -1,3 +1,4 @@
+/* Estilos gerais */
 * {
     margin: 0;
     padding: 0;
@@ -11,11 +12,12 @@ body {
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
+/* Desabilita rolagem para menu dropdown */
 body.no-scroll {
     overflow: hidden;
 }
 
+/* Cabeçalho */
 .header {
     width: 95%;
     height: 75px;
@@ -28,7 +30,10 @@ body.no-scroll {
 #nav-logo img {
     width: 2rem;
     height: 2rem;
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
+}
+.navbar {
+    display: none;
 }
 
 /* Menu dropdown */
@@ -68,11 +73,6 @@ body.no-scroll {
     transform: rotate(45deg);
     top: 4px;
 }
-
-.navbar {
-    display: none;
-
-}
 .dropdown-menu {
     display: flex;
     position: fixed;
@@ -93,7 +93,6 @@ body.no-scroll {
     transform: 0.5s;
     margin: 0;
 }
-
 .dropdown-menu ul {
     display: flex;
     flex-direction: column;
@@ -118,18 +117,14 @@ body.no-scroll {
     background-color: #F5F5F5;
     border: 1px solid #F5F5F5;
 }
-.dropdown-menu.show > ul > li:hover {
-    background-color: #545454;
+ .dropdown-menu.show > ul > li:hover {
     border: 1px solid #545454;
     cursor: pointer;
-    color: #FFFFFF;
-}
-
+ }
 .dropdown-menu ul li a {
     text-decoration: none;
     color: #545454;
 }
-
 
 /* Conteudo */
 .main-container {
@@ -144,9 +139,10 @@ body.no-scroll {
     width: 70%;
     height: auto;
     margin: 1rem 0;
-    /* background-color: rgb(0, 0, 0, 0.15);
-    border-radius: 0.5rem; */
 }
+
+/* Area de comentários */
+/* mobile */
 #comments-area {
     height: 150px;
     background-color: #FFFFFF;
@@ -191,7 +187,6 @@ body.no-scroll {
 #more-comments img:first-child {
     margin-left: 0;
 }
-
 .plus-one {
     margin-left: 1rem;
     padding: 0.5rem;
@@ -207,7 +202,66 @@ body.no-scroll {
     color: #545454;
 }
 
+/* Desktop */
+#clients-avaliation {
+    display: none;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 20px;
+    row-gap: 0;
+    width: 70%;
+    height: 150px;
+    margin-bottom: 100px;
+}
+.grid1 {
+    grid-area: 1/1/2/2;
+}
+.grid2 {
+    grid-area: 1/2/2/3;
+}
+.grid3 {
+    grid-area: 1/3/2/4;
+}
+.grid4 {
+    grid-area: 1/4/2/5;
+}
 
+.grid1, .grid2,
+.grid3, .grid4 {
+    border: 1px solid #CCCCCC;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 1rem;
+}
+.stars {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    margin-bottom: 1rem;
+}
+.stars > img {
+    width: 1rem;
+}
+.review-info {
+    display: flex;
+    margin-top: 1rem;
+}
+.review-info > img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+/* #clients-avaliation img {
+    width: 1rem;
+} */
+
+/* Rodapé */
+/* mobile */
 .footer {
     width: 100%;
     height: 300px;
@@ -230,10 +284,38 @@ body.no-scroll {
     height: 2rem;
     margin: 0 0.4rem;
 }
+.social-footer img:hover {
+    cursor: pointer;
+}
+.footer-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    column-gap: 0;
+    row-gap: 0;
+}
+.footer-division {
+    width: 300px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+}
+.footer-information {
+    font-size: 0.8rem;
+    padding: 1rem 0;
+    text-align: center;
+}
+.footer-division > a {
+    text-decoration: none;
+    color: #000000;
+    margin: 0.5rem 0;
+}
+.footer-division > a:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.3);
+}
 
-
-
-@media (min-width: 801px) {
+@media (min-width: 1024px) {
     .header {
         width: 70%;
     }
@@ -242,28 +324,49 @@ body.no-scroll {
     }
     .main-container {
         width: 70%;
+        min-height: auto;
     }
 
     .navbar {
         display: flex;
-        flex-direction: column;
+        justify-content: space-between;
         text-decoration: none;
         list-style: none;
 
     }
-    .menu-icon {
+    .navbar a {
+        padding: 0 1rem;
+        margin: 0 0.5rem;
+    }
+
+    #clients-avaliation {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .grid4 {
         display: none;
     }
-    #more-comments {
-        display: none;
-    }
+
+    .menu-icon,
+    #more-comments,
     #comments-area {
         display: none;
     }
+
+    .footer-content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
 }
 
-@media (min-width: 768px) {
-    .dropdown-menu.show {
-        width: 70%;
+@media (min-width: 1440px) {
+    .footer-content {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    #clients-avaliation {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .grid4 {
+        display: flex;
     }
 }
