envio de email testado, subindo para produção

--- a/homepage/templates/homepage/send.html
+++ b/homepage/templates/homepage/send.html
@@ -3,11 +3,10 @@
     
     {% block content %}
 
-        <h1>Envio de formulário de email</h1>
-        <p> {{ name }} </p>
-        <p> {{ email }} </p>
-        <p> {{ subject }} </p>
-        <p> {{ message }} </p>
+        <h1> {{ subject }}</h1>
+        <p>Nome: {{ name }} </p>
+        <p>E-mail: {{ email }} </p>
+        <p>Mensagem: {{ message }} </p>
     
     {% endblock content %}
 
