--- a/homepage/templates/homepage/services.html
+++ b/homepage/templates/homepage/services.html
@@ -1,21 +1,62 @@
 {% extends "homepage/index.html" %}
 {% load static %}
 {% block title %}produtos e serviços{% endblock title %}
-
+{% block extra_css %}
+<link rel="stylesheet" href="{% static "homepage/css/services.css" %}">
+{% endblock extra_css %}
 {% block content %}
 
 <div class="container">
-
+    {% comment %}
+        
     <div class="container__division">
         <h2>Em manutenção...</h2>
         <p>Olá, está página está em manutenção. Logo logo teremos novidades por aqui.</p>
         <p>Por enquanto, que tal navegar pelo nosso site e descobrir um pouco mais sobre nós?</p>
         <p>Você será redirecionado para a página inicial em <span id="countdown">10</span> segundos.</p>
     </div>
+
+    {% endcomment %}
+    <div class="container__division">
+
+        <span class="container__division-title">
+            <h2>Nossos Produtos</h2>
+            <h4>Clique e saiba mais</h4>
+        </span>
+
+        <div class="container__division-product">
+            <img src="{% static "homepage/img/bg-product.png" %}">
+            <h4>Cartão de visita virtual</h4>
+            <p>Desenvolvemos seu cartão de visita virtual em instantes!</p>
+        </div>
+
+        <div class="container__division-product">
+            <img src="{% static "homepage/img/bg-product.png" %}">
+            <h4>Criação de sites</h4>
+            <p>Desenvolvemos seu site compatível com todos os dispositivos!</p>
+        </div>
+
+        <div class="container__division-product">
+            <img src="{% static "homepage/img/bg-product.png" %}">
+            <h4>Domínio</h4>
+            <p>Registre o seu domínio personalizado conosco!</p>
+        </div>
+
+        <div class="container__division-product">
+            <img src="{% static "homepage/img/bg-product.png" %}">
+            <h4>Hospedagem</h4>
+            <p>Traga o seu site para os nossos servidores!</p>
+        </div>
+
+    </div>
 </div>
 
+{% comment %}
+    
 <script>
     var redirectUrl = "{{ redirect_url }}"
 </script>
 <script src="{% static "homepage/js/countdown.js" %}"></script>
+    
+{% endcomment %}
 {% endblock content %}
