--- a/homepage/static/homepage/css/services.css
+++ b/homepage/static/homepage/css/services.css
@@ -1,19 +1,26 @@
 .container__division {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+}
+.container__division-products {
     display: grid;
     grid-template-columns: 1fr;
-    width: 80%;
+    width: 100%;
     row-gap: 2rem;
+    column-gap: 2rem;
 }
 .container__division-title {
     width: 100%;
     text-align: left;
 }
 .container__division-title h2 {
-    color: #545454;
+    color: #000000;
     padding-bottom: 5px;
 }
 .container__division-title h4 {
-    color: #CCCCCC;
+    color: #545454;
     padding-bottom: 1rem;
 }
 .container__division-product {
@@ -28,4 +35,15 @@
     border-radius: 1rem;
     width: 100px;
     height: 100px;
+}
+
+@media (min-width: 1024px) {
+    .container__division-products {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (min-width: 1440px) {
+    .container__division-products {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
