--- a/homepage/templates/homepage/about.html
+++ b/homepage/templates/homepage/about.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block title %}quem somos{% endblock title %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static "homepage/css/about.css"%}">
+{% endblock extra_css %}
 
 {% block content %}
 
@@ -17,7 +20,7 @@
     {% endcomment %}
 
     <div class="container__division">
-        <section>
+        <section class="container__division-about-us">
             <h2>Quem Somos</h2>
             <p>
                 Na osantos webdesigner, nossa paixão é transformar ideias em realidade digital. Fundada com o compromisso de oferecer soluções web de alta qualidade, nossa empresa é um catalisador para a inovação e a excelência no desenvolvimento digital. Somos especializados em desenvolvimento de sites, cartões de visita virtuais, aplicações web (ERP’s, Sistemas de agendamento, entre outros.), serviços de hospedagem e venda de domínios. Com uma abordagem centrada no cliente, trabalhamos incansavelmente para entregar produtos que não apenas atendem, mas superam as expectativas.
@@ -26,7 +29,7 @@
                 Acreditamos que o sucesso dos nossos clientes é o nosso sucesso, e é por isso que colocamos a satisfação do cliente no coração de tudo o que fazemos.
             </p>
         </section>
-        <section>
+        <section class="container__division-mission">
             <h3>Nossa Missão</h3>
             <p>
                 Nossa missão é empoderar empresas e indivíduos a se destacarem no ambiente digital. Acreditamos no poder da internet para transformar negócios e conectar pessoas, e nos dedicamos a criar soluções que facilitam essa transformação. Queremos ser mais do que um fornecedor de serviços; queremos ser parceiros no sucesso dos nossos clientes.
@@ -54,7 +57,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="container__division-process">
             <h3>Nosso Processo</h3>
             <p>
                 Desde o primeiro contato até a entrega final e além, seguimos um processo meticuloso para garantir que cada projeto seja um sucesso:
@@ -77,7 +80,7 @@
                 </li>
             </ol>
         </section>
-        <section>
+        <section class="container__division-conclusion">
             <h3>Por que escolher a osantos?</h3>
             <ul>
                 <li>
