--- a/homepage/static/homepage/css/services.css
+++ b/homepage/static/homepage/css/services.css
@@ -32,7 +32,6 @@
 }
 .container__division-product img {
     border: 1px solid #545454;
-    border-radius: 1rem;
     width: 100px;
     height: 100px;
 }
@@ -45,8 +44,8 @@
         height: 100vh;
     }
 }
-/* @media (min-width: 1440px) {
+@media (min-width: 1440px) {
     .container__division-products {
         grid-template-columns: repeat(4, 1fr);
     }
-} */
+}
