--- a/homepage/templates/homepage/product_detail.html
+++ b/homepage/templates/homepage/product_detail.html
@@ -1,13 +1,74 @@
 {% extends "homepage/index.html" %}
 
+{% block title %}{{ product.name }}{% endblock title %}
+
+{% block extra_css %}
+{% load static %}
+<link rel="stylesheet" href="{% static "homepage/css/product_detail.css" %}">
+{% endblock extra_css %}
+
+<!-- https://johnywalves.com.br/entendo-tags-desenhando-formas-svg/ -->
+
 {% block content %}
 
-<h1>{{ product.name }}</h1>
+<div class="container">
 
-<img src="{{ product.image.url}}" alt="{{ product.name }}">
+    <div class="container__division-back">
+        <a href="{% url "products-services" %}">
 
-<p>{{ product.description }}</p>
-<p>Preço R$: {{ product.price }}</p>
-<a href="{% url "products-services" %}">Voltar</a>
+            <svg class="back-arrow" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <polyline points="75,10 25,50 75,90"
+                stroke-width="5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                fill="none"
+                stroke="#000000"></polyline>
+            </svg>
+            <p class="back-text">voltar</p>
+        </a>
+    </div>
+    <div class="container__division">
+
+        <img src="{{ product.image.url}}" alt="{{ product.name }}">
+        <h2>{{ product.name }}</h2>
+        <span class="product-price">
+            <h4>R$ {{ product.price }}</h4>
+            <span>
+                {% if product.payment == 'anual' %}
+                    <p>/ano</p>
+                {% elif product.payment == 'mensal'%}
+                    <p>/mês</p>
+                {% endif %}
+            </span>
+        </span>
+        
+        {% for chunck in description_chunck %}
+            <p>{{ chunck }}</p>
+        {% endfor %}
+
+        {% if product.faqs %}
+            {% for faq in faqs %}
+            <details class="questions">
+                <summary>
+                    {{ faq.question }} 
+                    <div class="question__arrow">
+                        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                            <polyline points="25,10 75,50 25,90"
+                            stroke-width="5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            fill="none"
+                            stroke="#000000"></polyline>
+                        </svg>
+                    </div>
+                </summary>
+                <p>{{ faq.answer }}</p>
+            </details>
+            {% endfor %}
+        {% endif %}
+
+    </div>
+
+</div>
 
 {% endblock content %}
