--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{% static "homepage/css/index.css" %}">
     {% endblock extra_css %}
 </head>
-<body>
+<body class="ubuntu-regular">
 
     <div class="header">
         <div class="header__logo">
