--- a/homepage/static/homepage/css/product_detail.css
+++ b/homepage/static/homepage/css/product_detail.css
@@ -4,18 +4,45 @@
     align-items: center;
     width: 90%;
 }
-.container__division img {
+.container__division-image {
+    width: 100%;
+    height: auto;
+}
+.container__division-image img {
+    transition: transform 0.4s ease-in-out;
+}
+.container__division-image img:hover {
+    transform: scale(1.05);
+}
+.container__division-content {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container__division-image img {
     width: 100%;
     height: 350px;
-    border: 1px solid #545454;
+    border-radius: 1rem;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.container__division h2 {
+.container__division-content h2 {
     margin: 2rem 0;
-    width: 100%;
+    width: 90%;
     text-align: left;
 }
-.container__division p {
-    text-align: justify;
+.container__division-content p {
+    width: 90%;
+    text-align: start;
+    margin: 5px 0;
+}
+.start-price {
+    font-size: 0.7rem;
+    width: 90%;
+    text-align: left;
+    margin-bottom: 10px ;
 }
 .container__division-back a {
     width: 100%;
@@ -26,6 +53,10 @@
     text-decoration: none;
     color: #000000;
     margin-top: 10px;
+}
+.container__division-back a:hover {
+    cursor: pointer;
+    font-weight: bold;
 }
 .container__division-back {
     display: flex;
@@ -41,11 +72,12 @@
     width: 80%;
 }
 .product-price {
-    width: 100%;
+    width: 90%;
     height: 60px;
     display: flex;
     align-items: center;
     font-size: 60px;
+    margin-bottom: 10px;
 }
 .product-price span {
     display: flex;
@@ -54,13 +86,47 @@
     height: 100%;
 }
 
+.product-message {
+    width: 90%;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+    background-color: #545454;
+    color: #FFFFFF;
+    padding: 0.3rem;
+    margin: 0.3rem 0;
+    transition: transform 0.3s ease-in-out;
+}
+.product-message:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.product-message img {
+    width: 30px;
+    height: 30px;
+}
+.desenho {
+    width: 50px;
+    height: 50px;
+    transform: rotate(-45deg);
+}
 .questions {
-    width: 100%;
+    width: 90%;
     min-height: 30px;
     border: 1px solid #CCCCCC;
     border-radius: 1rem;
     padding: 1rem;
-    margin: 0.6rem;
+    margin: 0.6rem 0;
+    background-color: #e5e3e3;
+    text-align: left;
+    transition: background-color 0.3 ease;
+}
+.questions:hover {
+    cursor: pointer;
+    background-color: #CCCCCC;
 }
 .questions summary {
     display: flex;
@@ -71,6 +137,40 @@
     margin: 0.3rem 0;
 }
 .question__arrow {
+    display: inline-block;
     width: 15px;
     height: 15px;
+    transition: transform 0.3s ease;
+    transform-origin: center;
+}
+
+details[open] .question__arrow{
+    transform: rotate(90deg);
+}
+details[open] {
+    background-color: #FFFFFF;
+}
+details[open]:hover {
+    background-color: #FFFFFF;
+}
+
+@media (min-width: 1024px) {
+    .container {
+        min-height: 80vh;
+    }
+    .container__division {
+        display: grid;
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .container__division-image {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .container__division-image img {
+        width: 28rem;
+        height: 28rem;
+    }
 }
