teste de criação de log

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static "homepage/css/global.css" %}">
-    <title>osantoschris | {% block title %}home{% endblock title %}</title>
+    <title>Digital Prime | {% block title %}home{% endblock title %}</title>
     <link rel="shortcut icon" href="{% static "homepage/img/favicon.png" %}" type="image/x-icon">
     {% block extra_css %}
         <link rel="stylesheet" href="{% static "homepage/css/index.css" %}">
